--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>first_challenge_sasaki</name>
+  <name>first_challenge</name>
   <version>0.0.0</version>
   <description>The first_challenge_sasaki package</description>
 
